--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap" rel="stylesheet">
+    <title>Todo App</title>
 </head>
+
 <body>
+    <div class="todo">
+        <h1 class="todo__title">Todo List</h1>
+        <form action="#" class="todo__form todo-form">
+            <input type="text" class="todo-form__input" placeholder="Add your new todo">
+            <button type="submit" class="todo-form__btn">+</button>
+        </form>
+        <ul class="todo__list todo-list" data-todo="todo-list"></ul>
+    </div>
 </body>
+
 </html>
