--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <h1 class="todo__title">Todo List</h1>
         <form action="#" class="todo__form todo-form" data-todo="form">
             <input type="text" class="todo-form__input" data-todo="input" placeholder="Add your new todo" required>
-            <button type="submit" class="todo-form__btn" data-todo="btn-add-item">+</button>
+            <button type="submit" class="todo-form__btn-add" data-todo="btn-add-item">+</button>
         </form>
         <ul class="todo__list todo-list" data-todo="list"></ul>
     </div>
